--- a/guestbook/propagationpolicy.yaml
+++ b/guestbook/propagationpolicy.yaml
@@ -3,6 +3,7 @@ kind: PropagationPolicy
 metadata:
   name: guestbook
 spec:
+  propagateDeps: true
   failover:
     application:
       decisionConditions:
